--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1>Mukta Dapkekar</h1>
             <h3>And I'm a <span class="text"></span> </h3>
             <p>I'm a web Developer <br>
-            expertise is to create and website design,Frontend design and many more... </p>
+            expertise is to create website design,Frontend design and many more... </p>
                 <div class="home-sci">
                     <a href="https://www.facebook.com/mukta.bhosale.3/" style="--i:7" class="home-sci-link"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/muktadapkekar/?hl=en" style="--i:8" class="home-sci-link"><i class="fa-brands fa-instagram"></i></a>
@@ -58,7 +58,7 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>Full Stack Developer!  </h4>
-            <p>I have done Master computer Application(MCA). Proven ability to learn new technologies quickly and apply them to real-world problems.<br>
+            <p>I have done Masters computer Application(MCA). Proven ability to learn new technologies quickly and apply them to real-world problems.<br>
                 Seeking an entry-level position where I can use my skills and knowledge to contribute to a team <br>
                 and make a positive impact on the company. <br>
                 To work for a company that would give me the oppotunity to grow both as a professional and as an<br>
