--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>Full Stack Developer!  </h4>
-            <p>I have done Masters computer Application(MCA). Proven ability to learn new technologies quickly and apply them to real-world problems.<br>
+            <p>I have done Masters in computer Application(MCA). Proven ability to learn new technologies quickly and apply them to real-world problems.<br>
                 Seeking an entry-level position where I can use my skills and knowledge to contribute to a team <br>
                 and make a positive impact on the company. <br>
                 To work for a company that would give me the oppotunity to grow both as a professional and as an<br>
