--- a/index.html
+++ b/index.html
@@ -58,12 +58,10 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>Full Stack Developer!  </h4>
-            <p>I have done Masters in computer Application(MCA). Proven ability to learn new technologies quickly and apply them to real-world problems.<br>
-                Seeking an entry-level position where I can use my skills and knowledge to contribute to a team <br>
-                and make a positive impact on the company. <br>
-                To work for a company that would give me the oppotunity to grow both as a professional and as an<br>
-                individual where my creativity improves with challenging jobs and set personal bench mark.
-             <br><br><a href="https://github.com/MuktaHD" class="btn-box">More About Me</a>
+<p>I hold a Master's degree in Computer Applications (MCA) with a proven ability to quickly learn new technologies and apply them to real-world problems.<br>
+ I am seeking an entry-level position where I can leverage my skills and knowledge to contribute to a team and make a positive impact on the company.<br>
+ I aim to work for a company that offers opportunities for both professional and personal growth, where I can enhance my creativity through challenging tasks and set personal benchmarks.</p>
+ <br><br><a href="https://github.com/MuktaHD" class="btn-box">More About Me</a>
 
              <h4>My interests</h4>
              <i class="fa-solid fa-music" style="color: aqua;"></i> &nbsp;&nbsp; Music &nbsp;&nbsp;
