--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1>Mukta Dapkekar</h1>
             <h3>And I'm a <span class="text"></span> </h3>
             <p>I'm a web Developer <br>
-           I specialize in creating website designs, front-end designs, and br> a variety of other related services. </p>
+           I specialize in creating website designs, front-end designs, and <br> a variety of other related services. </p>
                 <div class="home-sci">
                     <a href="https://www.facebook.com/mukta.bhosale.3/" style="--i:7" class="home-sci-link"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/muktadapkekar/?hl=en" style="--i:8" class="home-sci-link"><i class="fa-brands fa-instagram"></i></a>
