--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     </div>
    
 <div class="contact-form">
-     <form action="https://formspree.io/f/xpzvgebk" method="POST"> <!-- I am login on formspree website  -->
+     <form action="https://formspree.io/f/xpzvgebk" method="POST"> <!-- I am login on formspree website and get the action   -->
         <input type="text" name="name" id="name" placeholder="Enter Your Name" required>
         <input type="email" name="email" id="email" placeholder="Enter Your Email" required>
         <input type="text" name="subject" id="subject" placeholder="Enter Your Subject">
