--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <div class="contact-text">
         <h2>Contact  <span>Me</span></h2>
         <h4>Let's Work Together</h4>
-        <p>Join us and let's Develop other websites.</p>
+        <p>Join us on a thrilling adventure to craft extraordinary websites and elevate the digital landscape together!</p>
             <div class="contact-list">
                 <li><i class="fa-solid fa-envelope" ></i> &nbsp;&nbsp; muktabhosale3@gmail.com </li>
                 <li><i class="fa-solid fa-phone"></i> &nbsp;&nbsp;  9850868214</li>
