--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="https://www.instagram.com/muktadapkekar/?hl=en" style="--i:8" class="home-sci-link"><i class="fa-brands fa-instagram"></i></a>
                     <a href=" https://wa.me/9850868214" style="--i:9" class="home-sci-link"><i class="fa-brands fa-whatsapp"></i></a>
                     <a href="https://github.com/MuktaHD" style="--i:10" class="home-sci-link"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/mukta-bhosale-07815516b/" style="--i:11" class="home-sci-link"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/mukta-dapkekar/" style="--i:11" class="home-sci-link"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
 
                 <h2>Download My Resume</h2> <br><br>
@@ -267,7 +267,7 @@
             <div class="contact-icon">
                 <a href="https://www.facebook.com/mukta.bhosale.3/"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="https://www.instagram.com/muktadapkekar/?hl=en"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/mukta-bhosale-07815516b/"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/mukta-dapkekar/"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://github.com/MuktaHD"><i class="fa-brands fa-github"></i></a>
             </div>
             
