--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <a href="Mukta D. Resume.pdf" download="Mukta D. Resume.pdf"><button class="btn">Download CV</button></a>
                 <!-- <a href="https://github.com/MuktaHD" class="btn-box">More About Me</a> -->
         </div>
-        <span class="home-imgHover"> <img src="Mukta.jpg" style="border-radius:50%;  box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan,
+        <span class="home-imgHover"> <img src="Mukta2.png" style="border-radius:50%;  box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan,
             0 0 200px cyan; background-color:#032277 ;" height="550px" width="550px" alt="mukta"> </span>
     </section>
 
