--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="about" id="about">
     
         <div class="about-img">
-            <img src="mukta.png.jpg" alt="mukta">
+            <img src="mukta3.jpg" alt="mukta">
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
