--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <h5>Shubh Developers</h5>
                         <p>Shubh Developers is one of the leading property developers in Pune well known for
                          their luxury projects, quality construction & best customer support.</p>
-                            <a href="https://github.com/MuktaHD/MuktaHD"><i class="fa-solid fa-arrow-up-right-from-square" style="color: rgb(8, 53, 92);"></i></a>
+                            <a href="https://github.com/MuktaHD/Shubh-Developer"><i class="fa-solid fa-arrow-up-right-from-square" style="color: rgb(8, 53, 92);"></i></a>
                     </div>
                 </div>
     
